--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#about</h1>
-<p>Find me in app/views/welcome/about.html.erb</p>
+<h1>About Bloccit</h1>
+<p>A Reddit replica to teach the fundamentals of web development and Rails.</p>
+<p>Created by: Natalie Wyll</p>
