Assignment-13 using bootstrap button

--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,7 @@
 <h1>About Bloccit</h1>
 <p>A Reddit replica to teach the fundamentals of web development and Rails.</p>
+
+<p>Check me out on Facebook:</p>
+<button type="button" class="btn btn-default"><%= link_to "Click Here", "https://www.facebook.com/natalie.wyll" %></button>
+<br><br>
 <p>Created by: Natalie Wyll</p>
