Assignemnt-13 added button using css styling

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,3 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.social-btn {
+  border-radius: 5px;
+  height: 40px;
+  width: 100px;
+  color: #3de1f7;
+}
