--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -17,7 +17,7 @@
       </div>
       <div class="form-group">
         <%= f.label :body %>
-        <%= f.text_area :body, class: 'form-control', placeholder: "Post content ..." %>
+        <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Post content ..." %>
       </div>
       <div class="form-group">
         <%= f.submit "Save", class: "btn btn-success" %>
