--- a/app/views/advertisements/index.html.erb
+++ b/app/views/advertisements/index.html.erb
@@ -1,9 +1,9 @@
-<h1>All Advertisements</h1>
-<% @advertisements.each do |advertisement| %>
+<h1>All Ads</h1>
+<% @advertisements.each do |ad| %>
     <div class="media">
      <div class="media-body">
        <h4 class="media-heading">
-         <%= link_to advertisement.title, advertisement %>
+         <%= link_to "$#{ad.price}: #{ad.title}", ad %>
        </h4>
      </div>
    </div>
