--- a/app/views/advertisements/new.html.erb
+++ b/app/views/advertisements/new.html.erb
@@ -4,9 +4,8 @@
   <div class="col-md-4">
     <p>Guidelines for advertisements:</p>
     <ul>
-      <li>Make sure it rhymes.</li>
-      <li>Don't use the letter 'A'.</li>
-      <li>The incessant use of hashtags will get you banned.</li>
+      <li>Selling your soul is frowned upon.</li>
+      <li>The incessant use of Austin Powers references will get you banned.</li>
     </ul>
   </div>
   <div class="col-md-8">
