Assignment-25: added avatar to user sign-in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,15 @@
  
  @import "bootstrap-sprockets";
  @import "bootstrap";
+ 
+ .container:before {
+    margin-top: 5px;
+}
+ .nav-tabs{
+  margin-bottom: 30px;
+  padding-bottom: 5px;
+ }
+ 
+ .avatar-image {
+  border-radius: 50%;
+ }
