--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,16 +6,27 @@
 </h1>
 
 <div class="row">
+  
   <div class="col-md-8">
     <p><%= @post.body %></p>
+    <div>
+      <h3>Comments</h3>
+      <%= render @post.comments %>
+    </div>
+    <% if current_user %>
+      <%= render 'comments/form', comment: Comment.new, post: @post %>
+    <% end %>
   </div>
-  <% if user_is_authorized_for_post?(@post) %>
-    <div class="col-md-4">
+  
+  
+  <div class="col-md-4">
+    <% if user_is_authorized_for_post?(@post) %>
       <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: "btn btn-success" %>
       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
-      <%= link_to "Back to Topic", topic_path(@post.topic), class: "btn btn-info" %>
-    </div>
-  <% end %>
+    <% end %>
+    <%= link_to "Back to Topic", topic_path(@post.topic), class: "btn btn-info" %>
+  </div>
+  
 </div>
 
 
