--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,12 @@
-<h1>
-  <%= @post.title %> <br>
-  <small>
-    submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
-  </small>
-</h1>
+<div>
+  <%= render partial: 'votes/voting', locals: { post: @post } %>
+  <h1>
+    <%= @post.title %> <br>
+    <small>
+      submitted <%= time_ago_in_words(@post.created_at) %> ago by <%= @post.user.name %>
+    </small>
+  </h1>
+</div>
 
 <div class="row">
   
@@ -18,13 +21,23 @@
     <% end %>
   </div>
   
-  
   <div class="col-md-4">
     <% if user_is_authorized_for_post?(@post) %>
       <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: "btn btn-success" %>
       <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this post?'} %>
     <% end %>
     <%= link_to "Back to Topic", topic_path(@post.topic), class: "btn btn-info" %>
+    <div>
+      <h3>
+        <%= pluralize(@post.points, 'point') %>
+        <div>
+          <small>
+            <%= pluralize(@post.up_votes, 'up vote') %>,
+            <%= pluralize(@post.down_votes, 'down vote') %>
+          </small>
+        </div>
+      </h3>
+    </div>
   </div>
   
 </div>
