--- a/app/views/favorite_mailer/new_post.html.erb
+++ b/app/views/favorite_mailer/new_post.html.erb
@@ -4,13 +4,7 @@
     <meta content="text/html; charset=UTF_8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>New post to "<%= @topic.name %>"</h1>
-    <small>
-      By: <%= @post.user.name %>
-    </small>
-    <p>
-      <%= @post.body %>
-    </p>
+    <h1>You're now following "<%= @post.title %>". You will be notified of all comments made on your post. If you do not wish to recieve further notificaions, unfavorite the <%= link_to "post", topic_post_url(@post.topic, @post) %>.</h1>
     <p>
       <%= link_to "Veiw Post on site", topic_post_url(@post.topic, @post, anchor: "post-#{@post.id}") %>
     </p>
